Changed readme file

--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -20,7 +20,7 @@
     <main class="container">
       <article>
         <header class="hero">
-          <img src="../assets/images/image-omelette.jpeg" alt="Omelette" />
+          <img src="./assets/images/image-omelette.jpeg" alt="Omelette" />
           <div class="hero-text">
             <h1>Simple Omelette Recipe</h1>
             <p>
