--- a/product-preview-card/index.html
+++ b/product-preview-card/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <main>
+      <h1 class="sr-only">Product preview card</h1>
       <article class="product-card">
         <picture>
           <source
@@ -26,8 +27,8 @@
           />
         </picture>
         <section class="product-info">
-          <h1>Perfume</h1>
-          <h2>Gabrielle Essence Eau De Parfum</h2>
+          <h2>Perfume</h2>
+          <h3>Gabrielle Essence Eau De Parfum</h3>
           <p>
             A floral, solar and voluptuous interpretation composed by Olivier
             Polge, Perfumer-Creator for the House of CHANEL.
